tests/res/has/error_value_bare_type.say
type Shape { pub a; init() { this.a = 1; } }
say d = { nested: { a: 10 } };
d has { nested: Shape }; // error: A `has` value must be a literal, `is T`, `has T`, or a nested shape; did you mean `has Shape`?
